# Expense-management

./: .gitignore  .gitlab-ci.yml  Answers.md  README.rst  manage.py  pyproject.toml  pytest.ini
expense_management/: apps.py  asgi.py  forms.py  models.py  settings.py  urls.py  views.py  wsgi.py
expense_management/templates/: base.html  home.html  update.html
tests/: test_expense_management.py
