[tool.poetry]
name = "expense_management"
version = "0.1.0"
description = ""
authors = ["Dalius Deveikis <slkyper@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-django = "^4.1.0"
pytest-cov = "^2.11.1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
